fix: mobile view broken layout fix

--- a/ui/summit-2023/src/pages/Home/Home.scss
+++ b/ui/summit-2023/src/pages/Home/Home.scss
@@ -1,11 +1,12 @@
 .hero-banner {
   width: 420px;
-  height: 458px;
+  height: auto;
   min-width: 375px;
   max-width: 19vw;
   @media only screen and (max-width: 768px) {
-    width: 343px;
-    min-width: 343px;
+    width: 313px;
+    height: auto;
+    min-width: 313px;
   }
 }
 
@@ -72,9 +73,21 @@
     cursor: pointer;
     text-transform: none;
   }
-
   .get-started-button.MuiButton-root:hover {
     transform: scale(1.05);
+  }
+  .event-time {
+    flex-direction: row;
+    font-style: normal;
+    text-align: center;
+    margin: 20px;
+    p {
+      margin: 0;
+      font-weight: 600;
+      gap: 5px;
+      letter-spacing: normal;
+      line-height: 22px;
+    }
   }
 }
 
